<resources>
    <string name="app_name">pSurvey</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--Menu items -->
    <string name="menu_home">Home</string>
    <string name="start_survey">Start Survey</string>
    <string name="questionnaires">Questionnaires</string>

    <!--    error messages-->
    <string name="must_match">Both passwords must match</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">Submit</string>
    <string name="confirm_consent">Confirm Consent</string>
    <string name="survey">Begin Survey</string>
    <string name="next">Next</string>
    <string name="new_survey">New Survey</string>
    <string name="new_query">New Questionnaire</string>
    <string name="done">Done</string>
    <string name="logout">Log out</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="update_profile">Update Profile</string>
    <string name="about_app">About App</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="about_text">pSurvey is a questionnaire administering tool that is to be used by HCWs to their clients. \n\n The app will help gain insight on the issues that are heard.</string>
    <string name="back">Back</string>
    <string name="consent_yes">Yes</string>
    <string name="consent_no">No</string>
    <string name="details">Type your answer here …</string>
    <string name="InformedStatement">Statement by the interviewer/person taking consent I have accurately read out the informed consent and privacy to the potential participant, and to the best of my ability made sure that the participant understands the survey.</string>
    <string name="forget_password">Forgot Password</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="email">EMAIL</string>
    <string name="forget_pass_text">It\'s okay! reset your password</string>
    <string name="reset_password">CONTINUE</string>
    <string name="reset_pass">RESET PASSWORD</string>
    <string name="pass_confirm">CONFIRM PASSWORD</string>
    <string name="new_password">new password</string>
</resources>
