<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/forget_password_lyt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/grey_5"
    android:orientation="vertical"
    tools:context=".activities.auth.ForgetPasswordActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/forget_pass_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:padding="@dimen/spacing_smlarge">

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_medium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_middle"
                android:layout_marginLeft="@dimen/spacing_medium"
                android:layout_marginStart="@dimen/spacing_medium"
                android:text="@string/forget_password"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <View
                android:layout_width="70dp"
                android:layout_height="4dp"
                android:layout_marginLeft="@dimen/spacing_medium"
                android:layout_marginStart="@dimen/spacing_medium"
                android:background="@color/colorPrimary" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_mxlarge" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_small"
                android:visibility="visible"
                android:background="@android:color/white"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/spacing_mlarge">

                        <View
                            android:layout_width="0dp"
                            android:layout_height="@dimen/spacing_middle" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/phone_number"
                            android:textAlignment="center"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                            android:textColor="@color/grey_40" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/til_phone_no_reset"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:startIconDrawable="@drawable/ic_telephone"
                            app:endIconMode="clear_text"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edtxt_phone_no_reset"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="4dp"
                                android:layout_marginRight="4dp"
                                android:inputType="phone"
                                android:maxLength="10"
                                android:maxLines="1"
                                android:singleLine="true" />


                        </com.google.android.material.textfield.TextInputLayout>


                        <View
                            android:layout_width="0dp"
                            android:layout_height="@dimen/spacing_middle" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/email"
                            android:textAlignment="center"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                            android:textColor="@color/grey_40" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/til_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:startIconDrawable="@drawable/ic_email"
                            app:endIconMode="clear_text"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edtxt_email_reset"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="4dp"
                                android:layout_marginRight="4dp"
                                android:inputType="textEmailAddress"
                                android:maxLength="225"
                                android:maxLines="1"
                                android:singleLine="true" />


                        </com.google.android.material.textfield.TextInputLayout>

                        <View
                            android:layout_width="0dp"
                            android:layout_height="@dimen/spacing_middle" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/new_password"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                            android:textColor="@color/grey_40" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/til_pass_reset"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:passwordToggleEnabled="true"
                            app:startIconDrawable="@drawable/ic_password">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edtxt_pass_reset"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="4dp"
                                android:layout_marginRight="4dp"
                                android:inputType="textPassword"
                                android:maxLength="225"
                                android:maxLines="1"
                                android:singleLine="true" />


                        </com.google.android.material.textfield.TextInputLayout>


                        <View
                            android:layout_width="0dp"
                            android:layout_height="@dimen/spacing_middle" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pass_confirm"
                            android:textAlignment="center"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                            android:textColor="@color/grey_40" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/til_pass_res"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:passwordToggleEnabled="true"
                            app:startIconDrawable="@drawable/ic_password">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edtxt_pass_conf_reset"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="4dp"
                                android:layout_marginRight="4dp"
                                android:inputType="textPassword"
                                android:maxLength="225"
                                android:maxLines="1"
                                android:singleLine="true" />


                        </com.google.android.material.textfield.TextInputLayout>

                        <View
                            android:layout_width="0dp"
                            android:layout_height="@dimen/spacing_middle" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tv_forget_pass"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_medium"
                            android:text="@string/forget_pass_text"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:textColor="@color/grey_500"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="@dimen/spacing_middle" />

                    </LinearLayout>

                </androidx.core.widget.NestedScrollView>


            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_medium" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_forget_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/reset_pass"
            android:textColor="@color/white_greyish"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

    </LinearLayout>





</LinearLayout>
